<resources>
    <string name="app_name">Console Collection</string>
    <string name="nombre_del_desarrollador">nombre del desarrollador</string>
    <string name="gonzalez">© Gonzalez</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_contrase_a">confirmar contraseña</string>
    <string name="contrase_a">contraseña</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="email">email</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="registro">REGISTRO</string>
    <string name="ingreso">INGRESO</string>
    <string name="ingresar">Ingresar</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo a</string>
    <string name="copyright">© Gonzalez-Sember</string>
    <string name="nombre">nombre</string>
    <string name="nickname_example">NGC</string>
    <string name="console_name_example">Game Cube</string>
    <string name="console_brand_example">Nintendo</string>
    <string name="ver_detalles">Ver detalles</string>
    <string name="edit">Editar</string>
    <string name="logout">Salir</string>
    <string name="create_console">crear consola</string>
    <string name="add_console">Agregar Consola</string>
    <string name="loading">Cargando...</string>
    <string name="console_model_example">Indigo Colour</string>
    <string name="status_title">Estado:</string>
    <string name="console_status_example">AV Cable needs replacement</string>
    <string name="console_description_example">The one video game I ever wanted in my life. I remember asking as a gift to Santa Claus every single year. I just so much wanted to play Pokemon Colosseum and the new Resident Evil games.</string>
    <string name="description_title">Descripción:</string>
    <string name="send_button">Enviar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="close_button">Cerrar</string>
    <string name="main_title">Consolas</string>
    <string name="delete_console">Borrar</string>
    <string name="edit_console_title">Editar Consola</string>
    <string name="edit_user_data">Editar Datos</string>
    <string name="delete_user_button">Eliminar Cuenta</string>
    <string name="user_full_name">nombre de la persona</string>
    <string name="user_full_email">email@usuario.com</string>
    <string name="hint_console_name">nombre de la consola</string>
    <string name="hint_console_brand">marca de la consola</string>
    <string name="hint_console_nickname">como llamas a esta consola?</string>
    <string name="hint_console_model">modelo de la consola</string>
    <string name="hint_console_status">estado de la consola</string>
    <string name="hint_console_description">descripcion</string>
    <string name="select_pic">Seleccionar imagen:</string>
</resources>