<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/pastel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <ImageView
        android:id="@+id/app_banner"
        android:layout_width="109dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/edit_console" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/title_edit_console"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:textColor="@color/ashen"
                android:text="@string/edit_console_title"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_console_name"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_console_name"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_edit_console" />

            <EditText
                android:id="@+id/edit_console_brand"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hint_console_brand"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_name" />

            <EditText
                android:id="@+id/edit_console_nickname"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_console_nickname"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_brand" />

            <EditText
                android:id="@+id/edit_console_model"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_console_model"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_nickname" />

            <EditText
                android:id="@+id/edit_console_status"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_console_status"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_model" />

            <EditText
                android:id="@+id/edit_console_description"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_console_description"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_status" />

            <ImageView
                android:id="@+id/edit_console_picture"
                android:layout_width="117dp"
                android:layout_height="117dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.783"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_description"
                app:srcCompat="@drawable/upload_console_picture" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/moss"
                android:text="@string/send_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_cancel_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/bordeaux"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_upload_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/select_pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_console_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>