<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/upload_console_picture"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            />
        
        <TextView
            android:id="@+id/recTitle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/nickname_example"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/recImage"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/recSubtitle"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:text="@string/console_name_example"
            android:textSize="16sp"
            android:layout_toEndOf="@id/recImage"
            android:layout_below="@id/recTitle"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/recText"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:text="@string/console_brand_example"
            android:textSize="12sp"
            android:layout_toEndOf="@id/recImage"
            android:layout_marginTop="5dp"
            android:layout_below="@id/recSubtitle"
            android:layout_marginStart="10dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>